Change names of Dockerfiles

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -151,7 +151,7 @@
 			</p>
 			<p>
 				이후에 변경사항은 <code>docker-compose</code>에서 바로
-				<code>meet-api.Dockerfile</code>을 통해 build 해서 run 시킨다.
+				<code>Dockerfile.meet-api</code>을 통해 build 해서 run 시킨다.
 			</p>
 			<p>
 				<code>CodePipeLine</code>에선 <code>CodeBuild</code>와
